# material_designer

./: Cargo.toml  LICENSE  README.md
assets/: settings.camera
assets/materials/: base_texture.material_type  heightmap.material_type  only_color.material_type
assets/shaders/: base_texture.frag  base_texture.vert  heightmap.frag  heightmap.vert  only_color.frag  only_color.vert
assets/terrain/: README.md
src/: lib.rs
