[package]
name = "material_designer"
version = "0.1.0"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["bevy", "material", "shaders", "glsl", "texture"]
repository = "https://github.com/Neopallium/material_designer"

[dependencies]
bevy = { version = "0.5.0", features = [] }

bevy_asset_ron = "0.2"
ron = { version = "0.7", features = ["indexmap"] }

indexmap = { version = "1.7", features = ["serde"] }
lazy_static = "1.4.0"
serde = "1"
